2008-10-02  Heikki Junnila  <hjunnila@users.sf.net>

	* libs/common/qlcoutplugin.h:
	* libs/dmx4linuxout/dmx4linuxout.cpp:
	* libs/dmx4linuxout/dmx4linuxout.h:
	* libs/llaout/llaout.cpp:
	* libs/llaout/llaout.h:
	* libs/usbdmxout/usbdmxout-unix.cpp:
	* libs/usbdmxout/usbdmxout-unix.h:
	* libs/usbdmxout/usbdmxout-win32.cpp:
	* libs/usbdmxout/usbdmxout-win32.h:
	* main/dummyoutplugin.cpp:
	* main/dummyoutplugin.h:
	* main/outputmanager.cpp:
	* main/outputmap.h:
	* main/outputpatcheditor.cpp:
	* main/outputpatcheditor.h:

	Added output parameter to QLCOutPlugin::infoText().

2008-10-01  Heikki Junnila  <hjunnila@users.sf.net>

	* libs/dmx4linuxout/dmx4linuxout.cpp:
	* libs/dmx4linuxout/dmx4linuxout.h:
	* libs/llaout/llaout.cpp:
	* libs/llaout/llaout.h:
	* libs/usbdmxout/configureusbdmxout.cpp:
	* libs/usbdmxout/usbdmxdevice-unix.cpp:
	* libs/usbdmxout/usbdmxdevice-unix.h:
	* libs/usbdmxout/usbdmxout-unix.cpp:
	* libs/usbdmxout/usbdmxout-unix.h:
	* libs/usbdmxout/usbdmxout.cpp:
	* libs/usbdmxout/usbdmxout.h:
	* libs/usbdmxout/usbdmxout.pro:

	Fixed plugins to compile in unix target.

2008-09-22  Heikki Junnila  <hjunnila@users.sf.net>

	* libs/midiinput/configuremidiinput.cpp:

	Fixed compile issues on unix target.	

2008-09-19  Heikki Junnila  <hjunnila@users.sf.net>

	* main/inputmap.cpp:

	Fixed a crash bug during InputMap::saveXML().

2008-09-18  Heikki Junnila  <hjunnila@users.sf.net>

	* libs/midiinput/midiinputevent.cpp:
	* libs/midiinput/midiinputevent.h:
	* libs/midiinput/unix-mididevice.cpp:
	* libs/midiinput/win32-mididevice.cpp:

	Removed the "alive" flag from MIDIInputevent.
	Moved some event reading stuff from midiinput.cpp to
	unix-midiinput.cpp.
	
2008-09-18  Heikki Junnila  <hjunnila@users.sf.net>

	* libs/midiinput/mididevice.h:
	* libs/midiinput/midiinput.h:
	* libs/midiinput/midiinput.pro:
	* libs/midiinput/midipoller.h:
	* libs/midiinput/unix-mididevice.cpp:
	* libs/midiinput/unix-mididevice.h:
	* libs/midiinput/unix-midiinput.cpp: